force-app/main/default/objects/maps__ShapeLayer__c/maps__ShapeLayer__c.object-meta.xml
<CustomObject>
    <label>Maps Shape Layer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Shape Layers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>