force-app/main/default/objects/maps__ShapeLayer__c/fields/maps__CustomGeometry__c.field-meta.xml
<CustomField>
    <fullName>maps__CustomGeometry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Geometry</label>
    <type>Checkbox</type>
</CustomField>