force-app/main/default/objects/maps__ShapeLayer__c/fields/maps__Folder__c.field-meta.xml
<CustomField>
    <fullName>maps__Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Folder</label>
    <referenceTo>maps__Folder__c</referenceTo>
    <relationshipLabel>Shape Layers</relationshipLabel>
    <relationshipName>ShapeLayers</relationshipName>
    <type>Lookup</type>
</CustomField>